--- a/Index.html
+++ b/Index.html
@@ -18,11 +18,23 @@
     <script>
         function showRandomMessage() {
             const messages = [
+                "이 손패는 조상님이 도와줘도 못이길 패다. 그냥 나가고 담판ㄱㄱ",
+                "와...감탄의 경지다. 패가 이렇게도 말릴 수 있구나..이것도 재능이다. 서렌ㄱㄱ.",
+                "그 초동이나 공격권은 적당히 괜찮은데, 증지 맞으면 힘들듯 무리하지말고 저점만 세우자.",
+                "내 내면의 파라오의 사도님께서 상대 패에 니비루있다고 하심. 어떤 패를 잡든 니비루 케어하면서 겜하자.",
+                “이게 손패라고? 그냥 덱 다시 짜라. 게임 포기하고 카드 모으기나 하자.”,
+                “이게 굴러는 가는데 뭔가 껄끄럽다. 상황에 따라 신경 좀 써야겠어.”,
+	“애매하긴 한데, 어떻게든 굴리면 방법이 있겠지? 고민 좀 해야겠다.”,
+                “이 정도면 듀얼 시작 전에 미소가 절로 나온다. 계획대로 착착 굴러가겠는데?”,
+                “이게 뭐야, 듀얼이 아니라 생존 게임인데? 버틸 생각부터 해야 할 듯.”,
+                “ㅋㅋㅋㅋㅋ 이건 듀얼이 아니라 기도회다. 손패 보고 현실도피하고 싶겠다.”,
                 "이건 그냥 듀얼 안 하고 덱 던져야겠다. 상대방이 울면서 집에 갈 수준인데?",
                 “이 정도면 듀얼 시작 전에 승리 선언해도 무죄다. 전략이 그냥 교과서야.”,
                 “뭐, 굴러가긴 하겠네. 상대가 삽질만 안 하면 게임은 해볼 만하다.”,
                 	“음… 이거 혹시 덱 섞다가 고장 난 거 아니냐? 희망이 안 보인다.”,
-                “ㅋㅋㅋㅋ 이건 카드게임이 아니라 인생게임이다. 대체 무슨 생각으로 이런 구성을 한 거냐?”
+                “ㅋㅋㅋㅋ 이건 카드게임이 아니라 인생게임이다. 대체 무슨 생각으로 이런 구성을 한 거냐?”,
+                "이번 듀얼은 니 인생보다도 험난해보임. 조상님 영끌해서 탑드로 기도해라.",
+                "이게 선공이면 후공패잡고 후공이면 선공패 잡을 느낌"
             ];
             document.getElementById("message").innerText = messages[Math.floor(Math.random() * messages.length)];
         }
