--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
                 "패가 이렇게도 말릴 수 있구나..이것도 재능이다.",
                 "증지 케어 못하는게 유일한 한이다.",
                 "내 내면의 파라오의 사도님께서 상대한테 니비루있다고 하심.",
-                “그냥 덱 다시 짜라. 게임 포기하고 카드 모으기나해.”,
-                “이게 굴러는 가는데 껄끄럽다.신경 좀 써야겠어.”,
-	“애매하긴 한데, 어떻게든 굴리면 방법이 있겠지? 고민 좀 해라.”,
-                “이 정도면 듀얼 시작 전에 미소가 절로 나온다.”,
-                “듀얼이 아니라 생존 게임인데? 버틸 생각부터 해야 할 듯.”,
-                “ㅋㅋㅋㅋㅋ 이건 듀얼이 아니라 기도회다. 손패 보고 현실도피하고 싶겠다.”,
-                “이 정도면 듀얼 시작 전에 승리 선언해도 무죄다.”,
-                “뭐, 굴러가긴 하겠네. 상대가 삽질만 안 하면 게임 할만할듯.”,
-                	“음… 이거 혹시 덱 섞다가 고장 난 거 아니냐? 희망이 안 보인다.”,
-                “ㅋㅋㅋㅋ 이건 카드게임이 아니라 인생게임이다.",
 		    "대체 무슨 생각으로 이런 구성을 한 거냐?”,
                 "이번 듀얼은 니 인생보다도 험난해보임. 조상님 영끌해서 탑드로 기도해라.",
                 "선공이면 후공패잡고 후공이면 선공패 잡을 느낌"
+		"그냥 덱 다시짜라. 서렌하고 카드나 모아라.",
+		"이게 굴러는 가는데 껄끄럽다. 게임 신경좀 써라.",
+		"애매하기는 한데, 어떻게 방법은 있네. 상대 패트랩 없길 기도해.",
+		"이정도면 듀얼 시작 전부터 이긴 수준인데",
+		"ㅋㅋㅋㅋ이건 듀얼이 아니라 생존게임이다. 버틸 생각부터 해라.",
+		"손패 보고 현실도피하고 싶겠다.",
+		"뭐 굴러가기는 하겠는데, 니가 삽질만 안하면 이길듯.",
+		"혹시 덱 섞다가 고장났나?희망이 안보이는데?",
+		"ㅋㅋㅋㅋ이건 카드게임이 아니라 인생겜이다. 니 인생보다 험난해보임."
+		
             ];
             document.getElementById("message").innerText = messages[Math.floor(Math.random() * messages.length)];
         }
