--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 "증지 케어 못하는게 유일한 한이다.",
                 "내 내면의 파라오의 사도님께서 상대한테 니비루있다고 하심.",
 		    "대체 무슨 생각으로 이런 구성을 한 거냐?”,
-                "이번 듀얼은 니 인생보다도 험난해보임.영끌해서 탑드로 기도해라.",
+                "이번 듀얼은 니 인생보다도 험난해보임.",
                 "선공이면 후공패잡고 후공이면 선공패 잡을 느낌"
 		"그냥 덱 다시짜라. 서렌하고 카드나 모아라.",
 		"이게 굴러는 가는데 껄끄럽다. 게임 신경좀 써라.",
@@ -33,7 +33,7 @@
 		"손패 보고 현실도피하고 싶겠다.",
 		"뭐 굴러가기는 하겠는데, 니가 삽질만 안하면 이길듯.",
 		"혹시 덱 섞다가 고장났나?희망이 안보이는데?",
-		"ㅋㅋㅋㅋ이건 카드게임이 아니라 인생겜이다. 니 인생보다 험난해보임."
+		"ㅋㅋㅋㅋ이건 카드게임이 아니라 인생겜이다."
 		
             ];
             document.getElementById("message").innerText = messages[Math.floor(Math.random() * messages.length)];
