--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             text-align: center;
-            font-size: 1rem;
+            font-size: 2rem;
             margin-top: 20%;
         }
     </style>
@@ -18,21 +18,16 @@
     <script>
         function showRandomMessage() {
             const messages = [
-                "이 손패는 조상님이 도와줘도 못이길 패다.",
-                "패가 이렇게도 말릴 수 있구나..이것도 재능이다.",
-                "증지 케어 못하는게 유일한 한이다.",
-                "내 내면의 파라오의 사도님께서 상대한테 니비루있다고 하심.",
-	        "대체 무슨 생각으로 이런 구성을 한 거냐?”,
-                "선공이면 후공패잡고 후공이면 선공패 잡을 느낌"
-		"그냥 덱 다시짜라. 서렌하고 카드나 모아라.",
-		"이게 굴러는 가는데 껄끄럽다. 게임 신경좀 써라.",
-		"애매하기는 한데, 어떻게 방법은 있네. 상대 패트랩 없길 기도해.",
-		"이정도면 듀얼 시작 전부터 이긴 수준인데",
-		"ㅋㅋㅋㅋ이건 듀얼이 아니라 생존게임이다. 버틸 생각부터 해라.",
-		"손패 보고 현실도피하고 싶겠다.",
-		"뭐 굴러가기는 하겠는데, 니가 삽질만 안하면 이길듯.",
-		"혹시 덱 섞다가 고장났나?희망이 안보이는데?",
-		"ㅋㅋㅋㅋ이건 카드게임이 아니라 인생겜이다."
+                "와 정말 강한 패",
+	        "와 정말 약한 패",
+		"초동 빼고 다있음",
+		"패트랩을 못잡은ㅋㅋㅋ",
+		    "와 선공에 후공패ㅋㅋㅋ",
+		    "와 후공에 선공패ㅋㅋㅋ",
+		    "그냥 서렌해라.",
+		    "왜 지혼자 포커하냐?"
+		
+		    
 		
             ];
             document.getElementById("message").innerText = messages[Math.floor(Math.random() * messages.length)];
